# datalens_2.0

./: .env.example  .gitignore  README.md  SPEC.md
.agent/skills/documentation-and-adrs/: SKILL.md
.agent/skills/git-workflow-and-versioning/: SKILL.md
.agent/skills/incremental-implementation/: SKILL.md
.agent/skills/planning-and-task-breakdown/: SKILL.md
.agent/skills/spec-driven-development/: SKILL.md
.agent/skills/test-driven-development/: SKILL.md
backend/: datalens.db  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/routers/: aggregate.py  chat.py  data.py  profile.py  summary.py  upload.py
backend/tests/: test_api.py
docs/: report.md
docs/adrs/: 001-llm-provider.md  002-database-choice.md  003-frontend-stack.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.jsx  index.css
frontend/src/components/: ChatPanel.jsx  Dashboard.jsx  ExecutiveSummary.jsx  FilterPanel.jsx  UploadSection.jsx
frontend/tests/: App.test.jsx
tasks/: plan.md  todo.md
